# crab-battle

./: CMakeLists.txt  CodingGuidelines.md  Crab Battle.dev  Makefile  Milestone0.md  README.txt
Crab Battle.xcodeproj/: project.pbxproj
English.lproj/: InfoPlist.strings
Resources/: CrabBattle.icns  game-paths.txt  titles.txt
SDL_ttf/: README
branches/cmake-build/: Crab Battle.dev  README.txt
branches/cmake-build/Resources/: CMakeLists.txt  players.txt
branches/cmake-build/src/: BaseObject.cpp  BaseObject.h  Crab_Battle_Prefix.pch  GameState.cpp  GameState.h  MenuState.cpp  PausedState.cpp  PausedState.h  Player.cpp  Player.h  PlayerSelect.cpp  Rect.h  SoundEffect.cpp  Sprite.cpp  Sprite.h  Surface.cpp  Surface.h  exceptions.h  main.cpp  (+1 more)
branches/refcount/: Crab Battle.dev
branches/state-stack/: Crab Battle.dev  Makefile
src/: BaseObject.cpp  BaseObject.h  CMakeLists.txt  Crab_Battle_Prefix.pch  GameState.cpp  GameState.h  MenuState.cpp  MenuState.h  PauseState.cpp  PauseState.h  PausedState.cpp  Player.cpp  Player.h  PlayerSelect.cpp  PlayerSelect.h  Rect.cpp  Rect.h  SoundEffect.h  Sprite.cpp  Sprite.h  State.cpp  State.h  Surface.cpp  Surface.h  VictoryScreen.cpp  VictoryScreen.h  constants.h  exceptions.h  mac_main.m  main.cpp
tags/milestone1/: Info.plist
tags/milestone3/: Makefile
trunk/: Crab Battle.dev  Info.plist  Makefile  README.txt
trunk/Crab Battle.xcodeproj/: project.pbxproj
trunk/English.lproj/: InfoPlist.strings
trunk/Resources/: menu-paths.txt  pause-paths.txt  pselect-paths.txt  titles.txt
trunk/src/: GameState.cpp  GameState.h  MainMenu.h  MenuState.cpp  MenuState.h  PauseState.cpp  PauseState.h  PausedState.cpp  PausedState.h  Player.cpp  Player.h  PlayerSelect.cpp  PlayerSelect.h  Rect.cpp  Rect.h  SoundEffect.h  Sprite.cpp  Sprite.h  State.cpp  State.h  Surface.cpp  Surface.h  VictoryScreen.cpp  VictoryScreen.h  constants.h  exceptions.cpp  mac_main.h  mac_main.m  main.cpp  util.cpp
trunk/win32/: crab_battle.nsi
wiki/: CodingGuidelines.wiki  Milestone0.wiki
win32/: crab_battle.nsi
win32/SDL_image/: CHANGES  README
win32/ode/: INSTALL.txt
(+85 files in other folders)
